Update for similar search description and Intro page

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -61,10 +61,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Resources\Pages\Index.Designer.cs">
+    <Compile Update="Resources\Pages\Homepage.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Index.resx</DependentUpon>
+      <DependentUpon>Homepage.resx</DependentUpon>
     </Compile>
     <Compile Update="Resources\Pages\Shared\_ThemeGcwu.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -130,9 +130,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Resources\Pages\Index.resx">
+    <EmbeddedResource Update="Resources\Pages\Homepage.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Index.Designer.cs</LastGenOutput>
+      <LastGenOutput>Homepage.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\Pages\Shared\_ThemeGcwu.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
