Update to SS and region descriptions and new index page

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -156,6 +156,7 @@
 
 	<ItemGroup>
 		<Folder Include="Properties\" />
+		<Folder Include="wwwroot\themes-dist-8.0.1-gcweb\wet-boew\assets\" />
 	</ItemGroup>
 
   <ItemGroup>
