--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -81,6 +81,11 @@
 		  <AutoGen>True</AutoGen>
 		  <DependentUpon>BreadcrumbResources.resx</DependentUpon>
 	  </Compile>
+	  <Compile Update="Resources\PDFviews.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>PDFviews.resx</DependentUpon>
+	  </Compile>
   </ItemGroup>
 
  <ItemGroup>
@@ -151,6 +156,10 @@
 		<CustomToolNamespace>Resx</CustomToolNamespace>
 		<Generator>PublicResXFileCodeGenerator</Generator>
 		<LastGenOutput>BreadcrumbResources.Designer.cs</LastGenOutput>
+	</EmbeddedResource>
+	<EmbeddedResource Update="Resources\PDFviews.resx">
+	  <Generator>PublicResXFileCodeGenerator</Generator>
+	  <LastGenOutput>PDFviews.Designer.cs</LastGenOutput>
 	</EmbeddedResource>
   </ItemGroup>
 
