Generate Runtime Configs for Azure Linux Deploy

--- a/Business.Commands.Tests/Business.Commands.Tests.csproj
+++ b/Business.Commands.Tests/Business.Commands.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsTestProject>true</IsTestProject>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
   <ItemGroup>
