--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -25,6 +25,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Business.Dtos\Business.Dtos.csproj" />
 		<ProjectReference Include="..\Core\Core.csproj" />
 	</ItemGroup>
 
